# Nomad-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-overview.md  01-schema.md  02-tools.md  03-network.md  04-security.md  05-context-defense.md  06-workspace-isolation.md  07-dev-plan.md  08-implementation-spec.md  09-persistent-daemon.md
src/nomad/: __init__.py  cli.py  config.py  daemon.py  mcp_logging.py  result.py  schema.py  security.py  server.py  ssh.py  truncate.py
src/nomad/tools/: __init__.py  commands.py  init.py  network.py  sync.py  tasks.py
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_daemon.py  test_init.py  test_mcp_logging.py  test_network.py  test_result.py  test_security.py  test_server.py  test_ssh.py  test_sync.py  test_tasks.py  test_truncate.py
